--- a/client-side/css/card-window.css
+++ b/client-side/css/card-window.css
@@ -15,7 +15,11 @@
 
 h5 {
     color: #ffffff;
-    
+    font-weight: bold;
+}
+
+p {
+    color: #ffffff;
 }
 
 .card-title {
@@ -72,6 +76,27 @@ h5 {
 
 #card-button:hover {
     background-color: #468198;
+}
+
+.scrollable-box {
+    width: 100%; 
+    height: 200px; 
+    overflow: auto; 
+    padding: 10px; 
+}
+
+.scrollable-box::-webkit-scrollbar {
+    width: 10px; 
+}
+
+.scrollable-box::-webkit-scrollbar-thumb {
+    background-color: #999; 
+    border-radius: 5px; 
+}
+
+.scrollable-box::-webkit-scrollbar-track {
+    background-color: #f1f1f1; 
+    border-radius: 5px; 
 }
 
 @media (max-width: 600px) {
